[gd_scene load_steps=60 format=3 uid="uid://bp4t61akwt6bb"]

[ext_resource type="Script" path="res://Player.gd" id="1_b6vio"]
[ext_resource type="Texture2D" uid="uid://b63wpywcg2h8e" path="res://prototype-sprites/kabuto-fly-down.png" id="2_o70cn"]
[ext_resource type="Texture2D" uid="uid://mqwlw8jnl6ny" path="res://prototype-sprites/kabuto-cocoon-walk.png" id="2_rwjiq"]
[ext_resource type="Material" path="res://resources/Clockup_material.tres" id="2_uu08t"]
[ext_resource type="Texture2D" uid="uid://dsci8ejlwi4jg" path="res://prototype-sprites/kabuto-fly-foward.png" id="3_vue6w"]
[ext_resource type="Texture2D" uid="uid://cnesidf3e6tmr" path="res://prototype-sprites/kabuto-fly-up.png" id="4_f6xqa"]
[ext_resource type="Texture2D" uid="uid://bpnhtlktmf16x" path="res://prototype-sprites/kabuto-cocoon-exhausted-walk.png" id="4_nl43w"]
[ext_resource type="Texture2D" uid="uid://c5l2b7v1elegs" path="res://prototype-sprites/kabuto-exhausted-walk.png" id="5_oyvmr"]
[ext_resource type="Texture2D" uid="uid://comsqfxswyc5a" path="res://prototype-sprites/kabuto-prepare-landing.png" id="5_qnrrs"]
[ext_resource type="Texture2D" uid="uid://dhtb6mm8f4665" path="res://prototype-sprites/kabuto-cast-off.png" id="6_1wgpl"]
[ext_resource type="Texture2D" uid="uid://dyrbmguitfwma" path="res://prototype-sprites/kabuto-walk.png" id="6_e3fy2"]
[ext_resource type="AudioStream" uid="uid://sue03hangrup" path="res://sounds/puton-form.wav" id="12_4vpps"]
[ext_resource type="AudioStream" uid="uid://c8vnn6du0gys1" path="res://sounds/clock_up.wav" id="13_fx0at"]
[ext_resource type="AudioStream" uid="uid://b3k7na1edbknc" path="res://sounds/castoff-form.wav" id="13_ksg6e"]
[ext_resource type="AudioStream" uid="uid://b6128xgf8shtg" path="res://sounds/clock_over.mp3" id="14_cerk5"]
[ext_resource type="AudioStream" uid="uid://cjw50vjffnekj" path="res://sounds/underground.wav" id="15_hulp6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yqe8s"]
atlas = ExtResource("6_1wgpl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2jrcr"]
atlas = ExtResource("6_1wgpl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfpmq"]
atlas = ExtResource("6_1wgpl")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2a4g1"]
atlas = ExtResource("6_1wgpl")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrk4d"]
atlas = ExtResource("6_1wgpl")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v1c1"]
atlas = ExtResource("6_1wgpl")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3558"]
atlas = ExtResource("6_1wgpl")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnokf"]
atlas = ExtResource("4_nl43w")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_htdcf"]
atlas = ExtResource("4_nl43w")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6w8sv"]
atlas = ExtResource("4_nl43w")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8px50"]
atlas = ExtResource("4_nl43w")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0i31"]
atlas = ExtResource("4_nl43w")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6trcj"]
atlas = ExtResource("4_nl43w")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ma5w"]
atlas = ExtResource("2_rwjiq")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioyt3"]
atlas = ExtResource("2_rwjiq")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_djm2a"]
atlas = ExtResource("5_oyvmr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n8x7"]
atlas = ExtResource("5_oyvmr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuvl6"]
atlas = ExtResource("5_oyvmr")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wt5m"]
atlas = ExtResource("5_oyvmr")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7d1t"]
atlas = ExtResource("5_oyvmr")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_61dsq"]
atlas = ExtResource("2_o70cn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ag3rw"]
atlas = ExtResource("2_o70cn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi7dt"]
atlas = ExtResource("3_vue6w")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxrib"]
atlas = ExtResource("3_vue6w")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gryw"]
atlas = ExtResource("3_vue6w")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdl72"]
atlas = ExtResource("3_vue6w")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhwvb"]
atlas = ExtResource("4_f6xqa")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh76b"]
atlas = ExtResource("4_f6xqa")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk6de"]
atlas = ExtResource("4_f6xqa")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkytt"]
atlas = ExtResource("4_f6xqa")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_orv6l"]
atlas = ExtResource("5_qnrrs")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qho12"]
atlas = ExtResource("5_qnrrs")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ym8qg"]
atlas = ExtResource("6_1wgpl")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5vd4"]
atlas = ExtResource("6_1wgpl")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_giuyl"]
atlas = ExtResource("6_1wgpl")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgltf"]
atlas = ExtResource("6_1wgpl")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q481k"]
atlas = ExtResource("6_1wgpl")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_46n4r"]
atlas = ExtResource("6_1wgpl")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xpu4"]
atlas = ExtResource("6_1wgpl")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmfaw"]
atlas = ExtResource("6_e3fy2")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hohge"]
atlas = ExtResource("6_e3fy2")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_n1khf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqe8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2jrcr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfpmq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2a4g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrk4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v1c1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3558")
}],
"loop": false,
"name": &"cast_off",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnokf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htdcf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6w8sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8px50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0i31")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6trcj")
}],
"loop": false,
"name": &"cocoon_exhausted",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ma5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioyt3")
}],
"loop": true,
"name": &"cocoon_walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_djm2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n8x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuvl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wt5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7d1t")
}],
"loop": false,
"name": &"exhausted",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61dsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ag3rw")
}],
"loop": true,
"name": &"fly_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi7dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxrib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gryw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdl72")
}],
"loop": true,
"name": &"fly_forward",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhwvb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh76b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk6de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkytt")
}],
"loop": true,
"name": &"fly_up",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_orv6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qho12")
}],
"loop": true,
"name": &"prepare_landing",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ym8qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5vd4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_giuyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgltf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q481k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_46n4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xpu4")
}],
"loop": false,
"name": &"put_on",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmfaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hohge")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hxjt7"]
radius = 18.982
height = 101.987

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_b6vio")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = ExtResource("2_uu08t")
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_n1khf")
animation = &"walk"
frame = 1
frame_progress = 0.452553

[node name="RayCast2DBottom" type="RayCast2D" parent="."]
position = Vector2(8, 0)
target_position = Vector2(0, 30)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hxjt7")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-7, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_hxjt7")

[node name="RayCast2D2Top" type="RayCast2D" parent="."]
position = Vector2(-20, -4)
target_position = Vector2(0, -27)

[node name="RayCast2DPrepareLanding" type="RayCast2D" parent="."]
target_position = Vector2(0, -70)

[node name="RegenEnergyTimer" type="Timer" parent="."]

[node name="ClockupTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="StaminaTimer" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="PutonAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_4vpps")
bus = &"SFX"

[node name="CastOffAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_ksg6e")
bus = &"SFX"

[node name="ClockUpAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_fx0at")
volume_db = 5.584
bus = &"SFX"

[node name="ClockOverAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_cerk5")
volume_db = 2.0
bus = &"SFX"

[node name="UnderGroundAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_hulp6")
bus = &"SFX"

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="timeout" from="RegenEnergyTimer" to="." method="_on_regen_energy_timer_timeout"]
[connection signal="timeout" from="ClockupTimer" to="." method="_on_clock_over"]
[connection signal="timeout" from="StaminaTimer" to="." method="_on_stamina_timer_timeout"]
